fix sidebar z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,7 @@ body {
 .p-bottom {
   @apply pb-20 md:pb-40;
 }
+
+.nav {
+  z-index: 999 !important;
+}
